--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,5 @@
 #Grails Metadata file
-#Wed Feb 09 12:03:30 ICT 2011
-app.grails.version=1.3.6
-app.name=zk-datastore
-plugins.hibernate=1.3.6
-plugins.tomcat=1.3.6
+#Fri Apr 29 10:02:30 ICT 2011
+app.grails.version=1.3.7
+app.name=zk-redis
+plugins.tomcat=1.3.7
